--- a/tasks/generate.yml
+++ b/tasks/generate.yml
@@ -12,21 +12,24 @@
 
   vars:
     github_email: "mail@gmail.com"
-    default_file_location: "\n"
-    secure_passphrase: "yourpassphrase"
+    default_file_location: "/root/.ssh/id_rsa"  # example: "enter/a/desired/file/location"
+    secure_passphrase: "yourpassphrase" #Enter A Secure Passphrase Or Empty For No Passphrase
     
 
   tasks:
-    - name: Generating your public/private rsa key pair
+    - name: Generating public/private rsa key pair.
       expect:
         command: ssh-keygen -t rsa -b 4096 -C {{ github_email }}
         responses:
-          'Enter a file in which to save the key (/Users/you/.ssh/id_rsa): [Press enter]': "{{ default_file_location }}"
-          'Enter passphrase (empty for no passphrase): [Type a passphrase]': "{{ secure_passphrase }}"
-          'Enter same passphrase again: [Type passphrase again]': "{{ secure_passphrase }}"
+          'Enter file in which to save the key \(/home/ubuntu/.ssh/id_rsa\):': "{{ default_file_location }}"
+          'Enter passphrase \(empty for no passphrase\):': "{{ secure_passphrase }}"
+          'Enter same passphrase again:': "{{ secure_passphrase }}"
 
     - name: Start the ssh-agent in the background.
       command: eval "$(ssh-agent -s)"
 
     - name: Adding your SSH private key to the ssh-agent and store your passphrase in the keychain. 
-      command: ssh-add -k ~/.ssh/id_rsa
+      expect:
+        command: ssh-add -k ~/.ssh/id_rsa
+        responses:
+          'Enter passphrase for .* :': "{{ secure_passphrase }}"
